--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,10 @@
 
 ### DotnetCore ###
 # .NET Core build folders
-/bin
-/obj
+*/bin
+*/obj
+*/*/bin
+*/*/obj
 
 # Common node modules locations
 /node_modules
@@ -14,10 +16,10 @@
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
